[package]
name = "acoustics-simulator"
version = "0.1.0"
authors = ["Luz"]
description = "Simulation of audio waves by solving the Partial Differential Equation (PDE) of the wave-function."
homepage = "https://github.com/Luz/acoustics-simulator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Luz/acoustics-simulator"
include = ["/src/**/*.rs", "/Cargo.toml", "/LICENSE", "README.md"]

[[bin]]
name = "acoustics-simulator"
path = "src/main.rs"

[dependencies]
image = "^0.24.1"
colorous = "^1.0.6"

